02 - Bind html attribute

--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>02 - Attribute Binding and Event Handling</title>
     <script src="https://unpkg.com/vue@3"></script>
+    <style>
+        html, body {
+            height: 100%;
+        }
+
+        body {
+            display: grid;
+            place-items: center;
+        }
+
+        .text-red {
+            color: red;
+        }
+
+        .text-green {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
-        <p>
-            <input type="text" v-model="greeting" />
-        </p>
-        <p>
-            {{ greeting }} ({{ greeting.length }} number of characters)
-        </p>
+        <button :class="buttonClasses">Click Me</button>
     </div>
 
     <script>
         Vue.createApp({
             data() {
                 return {
-                    greeting: 'Hello World!'
+                    buttonClasses: 'text-green'
                 }
             },
             mounted() {
