--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,20 +26,21 @@
 </head>
 <body>
     <div id="app">
-        <button :class="buttonClasses">Click Me</button>
+        <button :class="active ? 'text-red' : 'text-green'" @click="toggle">Click Me</button>
     </div>
 
     <script>
         Vue.createApp({
             data() {
                 return {
-                    buttonClasses: 'text-green'
+                    active: false
                 }
             },
-            mounted() {
-                setTimeout(() => {
-                    this.greeting = 'Goodbye World!'
-                }, 3000)
+
+            methods: {
+                toggle() {
+                    this.active = ! this.active;
+                }
             }
         }).mount('#app');
     </script>
