--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body class="h-full grid place-items-center">
     <div id="app">
         <app-button></app-button>
+        <app-button></app-button>
+        <app-button></app-button>
     </div>
 
     <script>
@@ -18,7 +20,11 @@
                 'app-button': {
                     mounted: function () {
                         alert('Hello again, World!');
-                    }
+                    },
+
+                    template: `
+                    <button>Click Me</button>
+                    `,
                 }
             }
         };
