--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
     </div>
 
     <script type="module">
-        import AppButton from "./components/js/components/AppButton.js";
+        import App  from "./components/js/components/App.js";
 
-        let app = {
-            components: {
-                'app-button': AppButton,
-            }
-        };
-
-        Vue.createApp(app).mount('#app');
+        Vue.createApp(App).mount('#app');
     </script>
 </body>
 </html>
