06 - Type prop affects button class binding

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body class="h-full grid place-items-center">
     <div id="app">
-        <app-button type="primary" class="mx-2">Click Me</app-button>
-        <app-button type="secondary" class="mx-2">One more time</app-button>
-        <app-button type="warning" class="mx-2">This is the last time</app-button>
+        <app-button class="mx-2">Click Me</app-button>
+        <app-button type="secondary" class="mx-2">Secondary</app-button>
+        <app-button type="muted" class="mx-2">Muted</app-button>
+        <app-button type="warning" class="mx-2">Warning</app-button>
     </div>
 
     <script type="module">
