--- a/index.html
+++ b/index.html
@@ -3,50 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>064 - Component Props</title>
+    <title>07 - Bring it all together - Vue Components</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @keyframes spinner {
-            to {transform: rotate(360deg);}
-        }
-
-        .is-processing:before {
-            content: '';
-            box-sizing: border-box;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 20px;
-            height: 20px;
-            margin-top: -10px;
-            margin-left: -10px;
-            border-radius: 50%;
-            border: 2px solid #ccc;
-            border-top-color: #000;
-            animation: spinner .6s linear infinite;
-        }
-
-        .is-processing {
-            color: transparent;
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body class="h-full grid place-items-center">
-    <div id="app">
-        <div class="flex space-x-2">
-            <app-button>Click Me</app-button>
-            <app-button type="secondary">Secondary</app-button>
-            <app-button type="muted" :processing="true">Muted</app-button>
-            <app-button type="warning" :processing=true>Warning</app-button>
-        </div>
-    </div>
+<div id="app">
 
-    <script type="module">
-        import App  from "./components/js/components/App.js";
+</div>
 
-        Vue.createApp(App).mount('#app');
-    </script>
+<script type="module">
+    import App from './src/js/components/App.js';
+
+    Vue.createApp(App).mount('#app');
+</script>
 </body>
 </html>
